name:                hjsonrpc-http-server
version:             0.1.0.0
synopsis:            Libreria JSON-RPC HTPP para implementar servidores
homepage:            none
license:             BSD3
license-file:        LICENSE
author:              The Linux Kitten
maintainer:          thelinuxkitten@thelinuxkitten.org
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.JsonRpcSrvHttp
  build-depends:       base >=4 && <5
                     , aeson
                     , bytestring
                     , cgi
                     , fastcgi
                     , happstack-server
                     , happstack-server-tls
                     , hjsonrpc
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010

